--- a/styles.css
+++ b/styles.css
@@ -30,3 +30,11 @@ img.one {
     height: 25%;
     width: 25%;
 }
+img.two {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border: 2px solid black;
+    height: 60%;
+    width: 60%;
+}
